; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_mgmt.c_device_removed.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_mgmt.c_device_removed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.hci_dev = type { i32 }
%struct.mgmt_ev_device_removed = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@MGMT_EV_DEVICE_REMOVED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*, %struct.hci_dev*, i32*, i32)* @device_removed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @device_removed(%struct.sock* %0, %struct.hci_dev* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.sock*, align 8
  %6 = alloca %struct.hci_dev*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.mgmt_ev_device_removed, align 4
  store %struct.sock* %0, %struct.sock** %5, align 8
  store %struct.hci_dev* %1, %struct.hci_dev** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = getelementptr inbounds %struct.mgmt_ev_device_removed, %struct.mgmt_ev_device_removed* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @bacpy(i32* %11, i32* %12)
  %14 = load i32, i32* %8, align 4
  %15 = getelementptr inbounds %struct.mgmt_ev_device_removed, %struct.mgmt_ev_device_removed* %9, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* @MGMT_EV_DEVICE_REMOVED, align 4
  %18 = load %struct.hci_dev*, %struct.hci_dev** %6, align 8
  %19 = load %struct.sock*, %struct.sock** %5, align 8
  %20 = call i32 @mgmt_event(i32 %17, %struct.hci_dev* %18, %struct.mgmt_ev_device_removed* %9, i32 8, %struct.sock* %19)
  ret void
}

declare dso_local i32 @bacpy(i32*, i32*) #1

declare dso_local i32 @mgmt_event(i32, %struct.hci_dev*, %struct.mgmt_ev_device_removed*, i32, %struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
